Create recipe page and link it in homepage

--- a/recipes/pasta-pomodoro.html
+++ b/recipes/pasta-pomodoro.html
@@ -2,11 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>delicious recipes</title>
+        <title>Pasta Pomodoro</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        
+        <h1>Pasta Pomodoro:</h1>
     </body>
 </html>
