Add content to the first recipe page
The content of the first recipe page includes an image of the recipe,
a short description, ingredients and steps needed to make this dish.

--- a/recipes/pasta-pomodoro.html
+++ b/recipes/pasta-pomodoro.html
@@ -6,6 +6,33 @@
     </head>
 
     <body>
-        <h1>Pasta Pomodoro:</h1>
+        <h1>Pasta Pomodoro</h1>
+        <img src="../images/Spaghetti-Pomodoro-3-500x500.jpg" alt="a delicious looking plate of Pasta Pomodoro">
+        <h2>Description:</h2>
+        <p>Pasta Pomodoro is a classic Italian dish featuring a simple yet flavorful tomato sauce. <br>
+            It typically includes fresh tomatoes, garlic, olive oil, and basil. The sauce is simmered <br>
+            until rich and slightly thickened, then tossed with al dente pasta, often spaghetti or penne. <br>
+            The dish is finished with a sprinkle of Parmesan cheese and fresh basil, creating a light, fresh,<br>
+             and aromatic meal that's a staple of Italian home cooking.</p>
+        <h2>Ingredients:</h2>
+        <ul>
+            <li>Spaghetti</li>
+            <li>Cherry tomatoes</li>
+            <li>Olive oil</li>
+            <li>Garlic glove</li>
+            <li>Parmesan</li>
+            <li>Salt</li>
+            <li>Pepper</li>
+        </ul>
+        <h2>Steps:</h2>
+        <ol>
+            <li>Boil Pasta: Cook pasta in salted water until al dente. Reserve some pasta water, then drain.</li>
+            <li>Sauté Garlic: In a pan, heat olive oil and sauté minced garlic until fragrant.</li>
+            <li>Add Tomatoes: Add chopped fresh tomatoes (or canned) and cook until they break down and release juices.</li>
+            <li>Simmer Sauce: Let the sauce simmer for 10-15 minutes, stirring occasionally. Season with salt and pepper.</li>
+            <li>Mix Pasta: Toss cooked pasta in the sauce, adding reserved pasta water if needed to adjust consistency.</li>
+            <li>Add Basil: Stir in fresh basil leaves.</li>
+            <li>Serve: Plate the pasta and top with grated Parmesan cheese.</li>
+        </ol>
     </body>
 </html>
