Add second recipe page and link it in homepage

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/pasta-pomodoro.html">Pasta Pomodoro</a>
+        <a href="./recipes/pasta-pesto.html">Pasta Pesto</a>
 
     </body>
 </html>
