Add content to the second recipe page

--- a/recipes/pasta-pesto.html
+++ b/recipes/pasta-pesto.html
@@ -6,6 +6,28 @@
     </head>
 
     <body>
-        <h1>Pasta Pesto</h1>    
+        <h1>Pasta Pesto</h1>
+        <img src="../images/pasta-al-pesto-24-1-500x500.jpg" alt="a delicious looking plate of Pasta Pesto">  
+        <h2>Description:</h2>
+        <p>
+            Pasta with Pesto alla Genovese is a traditional Italian dish from Genoa featuring a vibrant green sauce<br> 
+            made from fresh basil, garlic, pine nuts, Parmesan cheese, and olive oil. The ingredients are blended into a smooth,<br>
+            fragrant pesto that is then tossed with al dente pasta, typically linguine or trofie. The dish is often garnished<br>
+            with extra Parmesan and sometimes a drizzle of olive oil, delivering a fresh, nutty, and aromatic flavor profile.</p> 
+        
+        <h2>Ingredients:</h2>
+        <ul>
+            <li>Pasta</li>
+            <li>Pesto alla Genovese</li>
+            <li>Parmesan</li>
+        </ul>
+
+        <h2>Steps:</h2>
+        <ol>
+            <li>Boil Pasta: Cook pasta in salted water until al dente. Reserve some pasta water, then drain.</li>
+            <li>Warm Pesto: In a large pan, lightly warm the pesto from the jar over low heat (optional).</li>
+            <li>Mix Pasta: Toss the cooked pasta in the warmed pesto, adding reserved pasta water to achieve desired consistency.</li>
+            <li>Serve: Plate the pasta and top with grated Parmesan cheese and fresh basil, if desired.</li>
+        </ol>
     </body>
 </html>
