--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>delicious recipes</title>
+        <title>Delicious Recipes</title>
     </head>
 
     <body>
