--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/pasta-pomodoro.html">Pasta Pomodoro</a>
-        <a href="./recipes/pasta-pesto.html">Pasta Pesto</a>
-        <a href="./recipes/porridge.html">Porridge</a>
+        <ul>
+            <li><a href="./recipes/pasta-pomodoro.html">Pasta Pomodoro</a></li>
+            <li><a href="./recipes/pasta-pesto.html">Pasta Pesto</a></li>
+            <li><a href="./recipes/porridge.html">Porridge</a></li>
+        </ul>
 
     </body>
 </html>
