--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Delicious Recipes</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="odin-recipes">Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/pasta-pomodoro.html">Pasta Pomodoro</a></li>
             <li><a href="./recipes/pasta-pesto.html">Pasta Pesto</a></li>
