--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1 class="odin-recipes">Odin Recipes</h1>
+        <h1 class="odin-recipes">Odin Recipes.</h1>
         <ul>
             <li><a href="./recipes/pasta-pomodoro.html">Pasta Pomodoro</a></li>
             <li><a href="./recipes/pasta-pesto.html">Pasta Pesto</a></li>
