--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="homepage" lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Delicious Recipes</title>
@@ -8,10 +8,10 @@
 
     <body>
         <h1 class="odin-recipes">Odin Recipes.</h1>
-        <ul>
-            <li><a href="./recipes/pasta-pomodoro.html">Pasta Pomodoro</a></li>
-            <li><a href="./recipes/pasta-pesto.html">Pasta Pesto</a></li>
-            <li><a href="./recipes/porridge.html">Porridge</a></li>
+        <ul class="recipe-list">
+            <li><a href="./recipes/pasta-pomodoro.html">Pasta Pomodoro.</a></li>
+            <li><a href="./recipes/pasta-pesto.html">Pasta Pesto.</a></li>
+            <li><a href="./recipes/porridge.html">Porridge.</a></li>
         </ul>
 
     </body>
