Add hompage background image to pasta-pomodoro.html and update heading styles

--- a/recipes/pasta-pomodoro.html
+++ b/recipes/pasta-pomodoro.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Pasta Pomodoro</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Pasta Pomodoro</h1>
+        <h1>Pasta Pomodoro.</h1>
         <img src="../images/Spaghetti-Pomodoro-3-500x500.jpg" alt="a delicious looking plate of Pasta Pomodoro">
         <h2>Description:</h2>
         <p>Pasta Pomodoro is a classic Italian dish featuring a simple yet flavorful tomato sauce. <br>
