Remove unnecessary class names

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="homepage" lang="en">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>Delicious Recipes</title>
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1 class="odin-recipes">Odin Recipes.</h1>
+        <h1>Odin Recipes.</h1>
         <ul class="recipe-list">
             <li><a href="./recipes/pasta-pomodoro.html">Pasta Pomodoro.</a></li>
             <li><a href="./recipes/pasta-pesto.html">Pasta Pesto.</a></li>
