Add template style for recipe pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>Odin Recipes.</h1>
+        <h1 class="recipes-heading">Odin Recipes.</h1>
         <ul class="recipe-list">
             <li><a href="./recipes/pasta-pomodoro.html">Pasta Pomodoro.</a></li>
             <li><a href="./recipes/pasta-pesto.html">Pasta Pesto.</a></li>
