--- a/recipes/pasta-pomodoro.html
+++ b/recipes/pasta-pomodoro.html
@@ -8,7 +8,9 @@
 
     <body>
         <h1>Pasta Pomodoro.</h1>
-        <img src="../images/Spaghetti-Pomodoro-3-500x500.jpg" alt="a delicious looking plate of Pasta Pomodoro">
+        <div>
+            <img src="../images/Spaghetti-Pomodoro-3-500x500.jpg" alt="a delicious looking plate of Pasta Pomodoro">
+        </div>
         <h2>Description:</h2>
         <p>Pasta Pomodoro is a classic Italian dish featuring a simple yet flavorful tomato sauce. <br>
             It typically includes fresh tomatoes, garlic, olive oil, and basil. The sauce is simmered <br>
