--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <h1 class="recipes-heading">Odin Recipes.</h1>
-        <ul class="recipe-list">
-            <li><a href="./recipes/pasta-pomodoro.html">Pasta Pomodoro.</a></li>
-            <li><a href="./recipes/pasta-pesto.html">Pasta Pesto.</a></li>
-            <li><a href="./recipes/porridge.html">Porridge.</a></li>
-        </ul>
-
+        <div class="homepage-container">
+            <h1 class="recipes-heading">Odin Recipes.</h1>
+            <ul class="recipe-list">
+                <li><a href="./recipes/pasta-pomodoro.html">Pasta Pomodoro.</a></li>
+                <li><a href="./recipes/pasta-pesto.html">Pasta Pesto.</a></li>
+                <li><a href="./recipes/porridge.html">Porridge.</a></li>
+            </ul>
+        </div>
     </body>
 </html>
