--- a/recipes/porridge.html
+++ b/recipes/porridge.html
@@ -7,31 +7,39 @@
     </head>
 
     <body>
-        <h1>Porridge</h1>
-        <img src="../images/Protein-Porridge-500x500.webp" alt="a delicious looking bowl of Porridge">
-
-        <h2>Description:</h2>
-        <p>Protein porridge is a nutritious breakfast option that combines oats with a source of protein,<br> 
-            such as protein powder or Greek yogurt, for a filling and balanced meal. The oats are cooked<br> 
-            in water or milk until creamy, then mixed with protein and sweeteners like honey or fruit for <br>
-            added flavor and nutrition.</p>
-        
-        <h2>Ingredients:</h2>
-        <ul>
-            <li>Oats</li>
-            <li>Almond milk</li>
-            <li>Berries</li>
-            <li>Honey</li>
-            <li>Protein</li>
-            <li>Nuts</li>
-        </ul>
-
-        <h2>Steps:</h2>
-        <ol>
-            <li>Cook Oats: Combine oats with water or milk in a pot. Cook over medium heat, stirring until thick and creamy.</li>
-            <li>Add Protein: Stir in your choice of protein powder, Greek yogurt, or a scoop of nut butter until fully mixed.</li>
-            <li>Sweeten: Add sweeteners like honey, maple syrup, or mashed banana to taste.</li>
-            <li>Serve: Top with fresh fruit, nuts, or seeds, and enjoy warm.</li>
-        </ol>
+        <div class="container">
+            <div class="recipe-card">
+                <h1 class="recipe-title">Porridge.</h1>
+                <img src="../images/Protein-Porridge-500x500.webp" alt="a delicious looking bowl of Porridge">
+                <div class="description">
+                <h2>Description.</h2>
+                <p>Protein porridge is a nutritious breakfast option that combines oats with a source of protein, 
+                    such as protein powder or Greek yogurt, for a filling and balanced meal. The oats are cooked 
+                    in water or milk until creamy, then mixed with protein and sweeteners like honey or fruit for 
+                    added flavor and nutrition.</p>
+                </div>
+            </div>
+            <div class="lists">
+                <div class="ingredients">   
+                    <h2>Ingredients.</h2>
+                    <ul>
+                        <li>Oats</li>
+                        <li>Almond milk</li>
+                        <li>Berries</li>
+                        <li>Honey</li>
+                        <li>Protein</li>
+                        <li>Nuts</li>
+                    </ul>
+                </div><div class="steps">
+                    <h2>Steps.</h2>
+                    <ol>
+                        <li>Cook Oats: Combine oats with water or milk in a pot. Cook over medium heat, stirring until thick and creamy.</li>
+                        <li>Add Protein: Stir in your choice of protein powder, Greek yogurt, or a scoop of nut butter until fully mixed.</li>
+                        <li>Sweeten: Add sweeteners like honey, maple syrup, or mashed banana to taste.</li>
+                        <li>Serve: Top with fresh fruit, nuts, or seeds, and enjoy warm.</li>
+                    </ol>
+                </div> 
+            </div>
+         </div>
     </body>
 </html>
